<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/medium_large_space"
        android:layout_marginLeft="@dimen/medium_large_space"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/extra_medium_space"
        android:paddingBottom="@dimen/extra_large_space"
        >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/extra_large_space"
            android:paddingTop="@dimen/extra_large_space">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColorHint="@color/hintColor"
                app:hintTextAppearance="@style/titleTextStyleBlueLarge">

                <EditText
                    android:id="@+id/firstname_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:padding="@dimen/icon_right_margin"
                    android:layout_margin="@dimen/medium_space"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/firstname_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColorHint="@color/hintColor"
                app:hintTextAppearance="@style/titleTextStyleBlueLarge">

                <EditText
                    android:id="@+id/lastname_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:padding="@dimen/icon_right_margin"
                    android:layout_margin="@dimen/medium_space"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/lastname_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColorHint="@color/hintColor"
                app:hintTextAppearance="@style/titleTextStyleBlueLarge">

                <EditText
                    android:id="@+id/emailid_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailid"
                    android:padding="@dimen/icon_right_margin"
                    android:layout_margin="@dimen/medium_space"
                    android:textColor="@color/black"

                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/loanamount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/emailid_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColorHint="@color/hintColor"
                app:hintTextAppearance="@style/titleTextStyleBlueLarge">

                <EditText
                    android:id="@+id/loanamount_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/loanamount"
                    android:padding="@dimen/icon_right_margin"
                    android:inputType="number"
                    android:maxLength="6"
                    android:layout_margin="@dimen/medium_space"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pannumber_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/loanamount_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColorHint="@color/hintColor"
                app:hintTextAppearance="@style/titleTextStyleBlueLarge">

                <EditText
                    android:id="@+id/pannumber_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pannumber"
                    android:maxLength="10"
                    android:padding="@dimen/icon_right_margin"
                    android:layout_margin="@dimen/medium_space"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/aadharnumber_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/pannumber_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColorHint="@color/hintColor"
                app:hintTextAppearance="@style/titleTextStyleBlueLarge">

                <EditText
                    android:id="@+id/aadhar_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/aadharnumber"
                    android:padding="@dimen/icon_right_margin"
                    android:layout_margin="@dimen/medium_space"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:digits="@string/valid_cars_numeric"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="12"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/voterid_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/aadharnumber_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:textColorHint="@color/hintColor"
                app:hintTextAppearance="@style/titleTextStyleBlueLarge">

                <EditText
                    android:id="@+id/voterid_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/voterid"
                    android:padding="@dimen/icon_right_margin"
                    android:layout_margin="@dimen/medium_space"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/double_extra_large_space"
            android:layout_marginRight="@dimen/double_extra_large_space"
            app:layout_constraintTop_toBottomOf="@+id/voterid_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/login_btn_bg"
            android:layout_marginBottom="@dimen/extra_large_space"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
    <include
        android:id="@+id/errorLayout"
        layout="@layout/view_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

        </android.support.constraint.ConstraintLayout>